--- a/.github/workflows/basic-check.yml
+++ b/.github/workflows/basic-check.yml
@@ -36,7 +36,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
 
       - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        run: composer install --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Execute tests (Unit and Feature tests) via PestPHP
   # Set environment
