--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "psr/http-client": "^1.0",
         "php-http/client-common": "^2.5",
         "php-http/logger-plugin": "^1.3",
-        "monolog/monolog": "^2.8"
+        "monolog/monolog": "^2.8",
+        "symfony/options-resolver": "^6.1"
     },
     "require-dev": {
         "php-http/curl-client": "^2.2",
