--- a/.github/workflows/basic-check.yml
+++ b/.github/workflows/basic-check.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: [ '8.1','8.0' ]
+        php-versions: [ '8.2', '8.1','8.0' ]
     name: P${{ matrix.php-versions }} - ${{ matrix.operating-system}}
         
     # Steps represent a sequence of tasks that will be executed as part of the job
